# pirateship

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs
benches/: chan_bench.rs  crypto_service_bench.rs  merkle_proof.rs  scitt_cose_bench.rs  scitt_policy_validation.rs  sign_bench.rs  storage.rs  tx_serde_bench.rs  verify_bench.rs
benches/assets/: claim.cose  policy.js
contrib/kms/: Cargo.toml  frontend.rs  main.rs
contrib/receipt_validator/: Cargo.toml  json2digest.rs  json2proto.rs  receipt_validator.rs  scitt_claim.json
contrib/scitt/: Cargo.toml  cbor_utils.rs  frontend.rs  main.rs  test_scitt.py
contrib/smallbank/: Cargo.toml  frontend.rs  main.rs
contrib/svr3/: Cargo.toml  frontend.rs  payloads.rs
deployment/aws-tf/: ssh.tf  variables.tf
deployment/azure-aci/: .gitignore  Dockerfile  arm-template-confidential.json  arm-template-standard.json  arm-template.json  vnet_subnet_nsg_template.json
deployment/azure-aci/setups/: lan.yaml  local.yaml
deployment/azure-arm/: cleanup-platform.sh  deploy-platform.sh  init.sh  platform-template.json
deployment/azure-arm/setups/: lan-small.conf  lan.conf  wan.conf
deployment/local/: docker-compose.yml
experiments/: lan_experiment_aci_scitt.toml  lan_experiment_caci.toml  lan_experiment_caci_scitt.toml  lan_manual.toml  lan_tee_experiments5.toml  local_experiment_aci.toml  local_experiment_aci_scitt.toml
extras/didx509-sys/: Cargo.toml  build.rs  didx509_wrapper.cpp  wrapper.h
extras/didx509-sys/src/: didx509.rs  lib.rs
extras/scitt-cose/: Cargo.toml
extras/scitt-cose/src/: lib.rs  main.rs
scripts/: __main__.py  ccf_experiments.py  container_utils.py  deployment.py  deployment_aci.py  experiments.py  locustfile.py  results.py  scitt_experiments.py  ssh_utils.py
src/: lib.rs
src/client/: logger.rs  mod.rs  worker.rs
src/client/workload_generators/: blanks.rs  mod.rs  (+3 more)
src/config/: log4rs.rs  mod.rs  storage.rs  tests.rs  workloads.rs
src/consensus/: app.rs  batch_proposal.rs  block_broadcaster.rs  block_sequencer.rs  block_tipcut.rs  channel_monitor.rs  checkpoint.rs  client_reply.rs  extra_2pc.rs  fork_receiver.rs  issuer.rs  logserver.rs  mod.rs  pacemaker.rs  witness_receiver.rs
src/crypto/: ed25519.rs  merkle.rs  mod.rs  service.rs  sha512.rs  tests.rs
src/peerreview/: mod.rs
src/proto/: checkpoint.proto  client.proto  consensus.proto  execution.proto  mod.rs  peerreview.proto  rpc.proto
src/rpc/: auth.rs  client.rs  mod.rs  server.rs  tests.rs
src/utils/: agnostic_ref.rs  atomic_struct.rs  file_storage.rs  mod.rs  perf.rs  serialize.rs  storage.rs  storage_service.rs  timer.rs
(+17 files in other folders)
